--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
         </div>
         <ul
           class="hidden absolute top-1/2 left-1/2 transform -translate-y-1/2 -translate-x-1/2 lg:flex lg:mx-auto lg:flex lg:items-center lg:w-auto lg:space-x-6">
-          <li><a class="text-sm text-gray-400 hover:text-gray-500" href="#">Harga</a></li>
+          <li><a class="text-sm text-gray-400 hover:text-gray-500" href="#harga">Harga</a></li>
           <li class="text-gray-800">
             <svg class="w-4 h-4 current-fill" xmlns="http://www.w3.org/2000/svg" fill="none" viewbox="0 0 24 24"
               stroke="currentColor">
@@ -36,7 +36,7 @@
               </path>
             </svg>
           </li>
-          <li><a class="text-sm text-gray-400" href="#">Cara Kerja</a></li>
+          <li><a class="text-sm text-gray-400" href="#carakerja">Cara Kerja</a></li>
           <li class="text-gray-800">
             <svg class="w-4 h-4 current-fill" xmlns="http://www.w3.org/2000/svg" fill="none" viewbox="0 0 24 24"
               stroke="currentColor">
@@ -55,9 +55,13 @@
             </svg>
           </li>
           <li><a class="text-sm text-gray-400 hover:text-gray-500" href="#">Kontak</a></li>
-        </ul><a
+        </ul>
+        <ul><a
           class="hidden lg:inline-block py-2 px-6 bg-white hover:bg-gray-50 text-sm text-green-600 font-bold rounded-l-xl rounded-t-xl transition duration-200"
-          href="#">Login</a>
+          href="login.html">Login</a>
+          <a class="hidden lg:inline-block py-2 px-6 bg-green-600 hover:bg-gray-50 hover:text-green-600 text-sm text-white font-bold rounded-l-xl rounded-t-xl transition duration-200"
+            href="daftar.html">Daftar Sekarang</a>
+        </ul>
       </nav>
       <div class="relative pt-12 lg:pt-20 pb-20 z-10">
         <div class="container mx-auto px-4">
@@ -77,7 +81,7 @@
                     Buat subdomain anda, rekrut tim anda dengan mudah</p>
                   <div><a
                       class="inline-block mb-3 lg:mb-0 lg:mr-3 w-full lg:w-auto py-2 px-6 leading-loose bg-green-600 hover:bg-green-700 text-white font-semibold rounded-l-xl rounded-t-xl transition duration-200"
-                      href="#">Gratis Daftar Sekarang</a><a
+                      href="daftar.html">Gratis Daftar Sekarang</a><a
                       class="inline-block w-full lg:w-auto py-2 px-6 leading-loose font-semibold bg-white hover:bg-gray-50 rounded-l-xl rounded-t-xl transition duration-200"
                       href="#">Cara Kerja</a></div>
                 </div>
@@ -117,7 +121,7 @@
             <ul>
               <li class="mb-1"><a
                   class="block p-4 text-sm font-semibold text-gray-400 hover:bg-green-50 hover:text-green-600 rounded"
-                  href="#">Harga</a></li>
+                  href="#harga">Harga</a></li>
               <li class="mb-1"><a
                   class="block p-4 text-sm font-semibold text-gray-400 hover:bg-green-50 hover:text-green-600 rounded"
                   href="#">Cara Kerja</a></li>
@@ -144,7 +148,7 @@
         </nav>
       </div>
     </section>
-    <section>
+    <section id="carakerja">
       <div class="skew skew-top mr-for-radius">
         <svg class="h-8 md:h-12 lg:h-20 w-full text-gray-50" viewbox="0 0 10 10" preserveaspectratio="none">
           <polygon fill="currentColor" points="0 0 10 10 0 10"></polygon>
@@ -259,7 +263,7 @@
         </svg>
       </div>
     </section>
-    <section>
+    <section id="harga">
       <div class="skew skew-top mr-for-radius">
         <svg class="h-8 md:h-12 lg:h-20 w-full text-gray-50" viewbox="0 0 10 10" preserveaspectratio="none">
           <polygon fill="currentColor" points="0 0 10 10 0 10"></polygon>
