--- a/public/daftar.html
+++ b/public/daftar.html
@@ -22,7 +22,7 @@
                 <a class="text-3xl font-bold leading-none" href="index.html">
                   <img class="h-12" src="atis-assets/logo/atis/atis-mono-black.svg" alt="" width="auto">
                 </a>
-                <a class="py-2 px-6 text-xs rounded-l-xl rounded-t-xl bg-green-100 hover:bg-green-200 text-green-600 font-bold transition duration-200" href="#">Sign In</a>
+                <a class="py-2 px-6 text-xs rounded-l-xl rounded-t-xl bg-green-100 hover:bg-green-200 text-green-600 font-bold transition duration-200" href="#">Login</a>
               </div>
               <div>
                 <div class="mb-6 px-3">
@@ -65,7 +65,7 @@
                     <p class="mt-16 text-xs text-gray-400"><a class="underline hover:text-gray-500" href="#">Policy privacy</a> and <a class="underline hover:text-gray-500" href="#">Syarat dan Ketentuan</a></p>
                   </div>
                 </form>
-              </div>
+              </div>  
             </div>
           </div>
           <div class="hidden lg:block relative w-full lg:w-1/2">
