--- a/public/index.html
+++ b/public/index.html
@@ -206,8 +206,8 @@
                         d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z">
                       </path>
                     </svg></span>
-                  <h4 class="mb-2 text-2xl font-bold font-heading">Lorem ipsum dolor sit amet</h4>
-                  <p class="text-gray-500 leading-loose">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                  <h4 class="mb-2 text-2xl font-bold font-heading">Job Portal Gratis dan Keren!</h4>
+                  <p class="text-gray-500 leading-loose">Website lowongan kerja White Label. Setiap perusahaan, gratis mendapatkan satu portal lowongan.</p>
                 </div>
                 <div class="py-6 pl-6 pr-4 shadow rounded bg-white"><span
                     class="mb-4 inline-block p-3 rounded-lg bg-green-100">
@@ -217,8 +217,8 @@
                         d="M3 1a1 1 0 000 2h1.22l.305 1.222a.997.997 0 00.01.042l1.358 5.43-.893.892C3.74 11.846 4.632 14 6.414 14H15a1 1 0 000-2H6.414l1-1H14a1 1 0 00.894-.553l3-6A1 1 0 0017 3H6.28l-.31-1.243A1 1 0 005 1H3zM16 16.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zM6.5 18a1.5 1.5 0 100-3 1.5 1.5 0 000 3z">
                       </path>
                     </svg></span>
-                  <h4 class="mb-2 text-2xl font-bold font-heading">Lorem ipsum dolor sit amet</h4>
-                  <p class="text-gray-500 leading-loose">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                  <h4 class="mb-2 text-2xl font-bold font-heading">Kemudahan Manajemen Rekrutmen</h4>
+                  <p class="text-gray-500 leading-loose">Dukungan End To End Recruitmen Process dari buka lowongan, hingga pegawai diterima!</p>
                 </div>
               </div>
               <div class="w-full md:w-1/2 lg:mt-20 px-4">
@@ -230,22 +230,8 @@
                         d="M16 4v12l-4-2-4 2V4M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z">
                       </path>
                     </svg></span>
-                  <h4 class="mb-2 text-2xl font-bold font-heading">Lorem ipsum dolor sit amet</h4>
-                  <p class="text-gray-500 leading-loose">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                </div>
-                <div class="py-6 pl-6 pr-4 shadow rounded-lg bg-white"><span
-                    class="mb-4 inline-block p-3 rounded bg-green-100">
-                    <svg class="w-10 h-10 text-green-600" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 20 20"
-                      fill="currentColor">
-                      <path fill-rule="evenodd"
-                        d="M6 6V5a3 3 0 013-3h2a3 3 0 013 3v1h2a2 2 0 012 2v3.57A22.952 22.952 0 0110 13a22.95 22.95 0 01-8-1.43V8a2 2 0 012-2h2zm2-1a1 1 0 011-1h2a1 1 0 011 1v1H8V5zm1 5a1 1 0 011-1h.01a1 1 0 110 2H10a1 1 0 01-1-1z"
-                        clip-rule="evenodd"></path>
-                      <path
-                        d="M2 13.692V16a2 2 0 002 2h12a2 2 0 002-2v-2.308A24.974 24.974 0 0110 15c-2.796 0-5.487-.46-8-1.308z">
-                      </path>
-                    </svg></span>
-                  <h4 class="mb-2 text-2xl font-bold font-heading">Lorem ipsum dolor sit amet</h4>
-                  <p class="text-gray-500 leading-loose">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                  <h4 class="mb-2 text-2xl font-bold font-heading">Rekrutment Cepat dan Adaptif*</h4>
+                  <p class="text-gray-500 leading-loose">Dukungan Recruitmen Process Customization yang membuat proses rekrutmen cepat dan sesuai kebutuhan</p>
                 </div>
               </div>
             </div>
