--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&amp;display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="css/tailwind/tailwind.min.css" />
   <link rel="icon" type="image/png" sizes="16x16" href="favicon-tailwind.png" />
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <script src="js/main.js"></script>
 </head>
 
@@ -67,7 +68,7 @@
         <div class="container mx-auto px-4">
           <div class="flex flex-wrap -mx-4">
             <div class="w-full lg:w-1/2 px-4 mb-12 lg:mb-0 flex items-center">
-              <div class="w-full text-center lg:text-left">
+              <div class="w-full text-center lg:text-left" data-aos="zoom-in">
                 <div class="max-w-md mx-auto lg:mx-0">
                   <h2 class="text-4xl lg:text-5xl font-extrabold font-heading leading-3"><span>Cara Mudah, Cepat dan
                       Keren
@@ -163,7 +164,7 @@
         <div class="container mx-auto px-4">
           <div class="flex flex-wrap items-center">
             <div class="w-full lg:w-1/2 mb-12 lg:mb-0">
-              <div class="max-w-md lg:mx-auto"><span class="text-green-600 font-bold">Dolor sit amet consectutar</span>
+              <div class="max-w-md lg:mx-auto"><span class="text-green-600 font-bold">Solusi Kami</span>
                 <h2 class="my-2 text-4xl lg:text-5xl font-bold font-heading">Kelebihan BukaLowongan</h2>
                 <p class="mb-6 text-gray-500 leading-loose">Kami memiliki misi untuk berkontribusi membuka sebanyak
                   mungkin lapangan kerja. Jika anda ada merasa penawaran yang ada
@@ -175,7 +176,7 @@
                       <path fill-rule="evenodd"
                         d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
                         clip-rule="evenodd"></path>
-                    </svg><span>Membuat Web Job Seperti Posting Media Sosial</span>
+                    </svg><span class="text-green-600">Membuat Web Job Seperti Posting Media Sosial</span>
                   </li>
                   <li class="flex mb-4">
                     <svg class="mr-2 w-6 h-6 text-green-400" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 20 20"
@@ -183,7 +184,7 @@
                       <path fill-rule="evenodd"
                         d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
                         clip-rule="evenodd"></path>
-                    </svg><span>Integrasi Tes Psikologi dan Tes Teknis Sesuai Kebutuhan</span>
+                    </svg><span class="text-green-600">Integrasi Tes Psikologi dan Tes Teknis Sesuai Kebutuhan</span>
                   </li>
                   <li class="flex mb-4">
                     <svg class="mr-2 w-6 h-6 text-green-400" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 20 20"
@@ -191,7 +192,7 @@
                       <path fill-rule="evenodd"
                         d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z"
                         clip-rule="evenodd"></path>
-                    </svg><span>Proses Rekrutmen yang tidak merepotkan sama sekali</span>
+                    </svg><span class="text-green-600">Proses Rekrutmen yang tidak merepotkan sama sekali</span>
                   </li>
                 </ul>
               </div>
@@ -262,8 +263,7 @@
       </div>
       <div class="py-20 bg-gray-50 radius-for-skewed">
         <div class="container mx-auto px-4">
-          <div class="max-w-2xl mx-auto text-center mb-16"><span class="text-green-600 font-bold">Dolor sit amet
-              consectutar</span>
+          <div class="max-w-2xl mx-auto text-center mb-16"><span class="text-green-600 font-bold">Pilih sesuai kebutuhan Anda</span>
             <h2 class="mb-2 text-4xl lg:text-5xl font-bold font-heading">Pilih penawaran terbaik</h2>
             <p class="mb-6 text-gray-500">Jika anda ada merasa penawaran yang ada tidak cocok, Kami terbuka untuk opsi
               lainnya.</p>
@@ -518,6 +518,10 @@
       </div>
     </section>
   </div>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 
 </html>
