--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,7 @@
         <div class="container mx-auto px-4">
           <div class="flex flex-wrap -mx-4">
             <div class="w-full lg:w-1/2 px-4 mb-12 lg:mb-0 flex items-center">
-              <div class="w-full text-center lg:text-left" data-aos="zoom-in">
+              <div class="w-full text-center lg:text-left" data-aos="zoom-in" data-aos-duration="2000">
                 <div class="max-w-md mx-auto lg:mx-0">
                   <h2 class="text-4xl lg:text-5xl font-extrabold font-heading leading-3"><span>Cara Mudah, Cepat dan
                       Keren
@@ -88,7 +88,7 @@
                 </div>
               </div>
             </div>
-            <div class="w-full lg:w-1/2 px-4">
+            <div class="w-full lg:w-1/2 px-4" data-aos="zoom-in" data-aos-duration="2000">
               <div class="flex flex-wrap lg:mb-4 lg:ml-6"><img
                   class="w-full md:w-1/2 lg:w-1/3 h-64 p-2 object-cover rounded-4xl lg:rounded-br-none"
                   src="https://images.unsplash.com/photo-1557804483-ef3ae78eca57?ixlib=rb-1.2.1&amp;ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&amp;auto=format&amp;fit=crop&amp;w=941&amp;q=80"
@@ -149,8 +149,8 @@
         </nav>
       </div>
     </section>
-    <section id="carakerja">
-      <div class="skew skew-top mr-for-radius">
+    <section id="carakerja" data-aos="zoom-in" data-aos-duration="2000">
+      <!-- <div class="skew skew-top mr-for-radius">
         <svg class="h-8 md:h-12 lg:h-20 w-full text-gray-50" viewbox="0 0 10 10" preserveaspectratio="none">
           <polygon fill="currentColor" points="0 0 10 10 0 10"></polygon>
         </svg>
@@ -159,7 +159,7 @@
         <svg class="h-8 md:h-12 lg:h-20 w-full text-gray-50" viewbox="0 0 10 10" preserveaspectratio="none">
           <polygon fill="currentColor" points="0 10 10 0 10 10"></polygon>
         </svg>
-      </div>
+      </div> -->
       <div class="py-20 bg-gray-50 radius-for-skewed">
         <div class="container mx-auto px-4">
           <div class="flex flex-wrap items-center">
@@ -201,10 +201,11 @@
               <div class="mb-8 lg:mb-0 w-full md:w-1/2 px-4">
                 <div class="mb-8 py-6 pl-6 pr-4 shadow rounded bg-white"><span
                     class="mb-4 inline-block p-3 rounded-lg bg-green-100">
-                    <svg class="w-10 h-10 text-green-600" xmlns="http://www.w3.org/2000/svg" fill="none"
-                      viewbox="0 0 24 24" stroke="currentColor">
-                      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                        d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z">
+                    <svg class="icon line" width="48" height="48" id="portfolio" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                      <title style="stroke-width: 2; stroke: rgb(5, 150, 105);">portfolio</title>
+                      <path id="primary"
+                        d="M20,12v8a1,1,0,0,1-1,1H5a1,1,0,0,1-1-1V12M16,4a1,1,0,0,0-1-1H9A1,1,0,0,0,8,4V7h8ZM13,14h2.88A5.12,5.12,0,0,0,21,8.88V8a1,1,0,0,0-1-1H4A1,1,0,0,0,3,8v.88A5.12,5.12,0,0,0,8.12,14H11m2-1H11v2h2Z"
+                        style="fill: none; stroke: rgb(5, 150, 105); stroke-linecap: round; stroke-linejoin: round; stroke-width: 2;">
                       </path>
                     </svg></span>
                   <h4 class="mb-2 text-2xl font-bold font-heading">Job Portal Gratis dan Keren!</h4>
@@ -212,11 +213,13 @@
                 </div>
                 <div class="py-6 pl-6 pr-4 shadow rounded bg-white"><span
                     class="mb-4 inline-block p-3 rounded-lg bg-green-100">
-                    <svg class="w-10 h-10 text-green-600" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 20 20"
-                      fill="currentColor">
-                      <path
-                        d="M3 1a1 1 0 000 2h1.22l.305 1.222a.997.997 0 00.01.042l1.358 5.43-.893.892C3.74 11.846 4.632 14 6.414 14H15a1 1 0 000-2H6.414l1-1H14a1 1 0 00.894-.553l3-6A1 1 0 0017 3H6.28l-.31-1.243A1 1 0 005 1H3zM16 16.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zM6.5 18a1.5 1.5 0 100-3 1.5 1.5 0 000 3z">
+                    <svg class="icon line" width="48" height="48" id="alarm" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                      <path d="M19.5,13.5A7.5,7.5,0,1,1,12,6,7.5,7.5,0,0,1,19.5,13.5ZM9,3h6M12,3V6"
+                        style="fill: none; stroke: rgb(5, 150, 105); stroke-linecap: round; stroke-linejoin: round; stroke-width: 2;">
                       </path>
+                      <polyline points="12 10 12 13 14 15"
+                        style="fill: none; stroke: rgb(5, 150, 105); stroke-linecap: round; stroke-linejoin: round; stroke-width: 2;">
+                      </polyline>
                     </svg></span>
                   <h4 class="mb-2 text-2xl font-bold font-heading">Kemudahan Manajemen Rekrutmen</h4>
                   <p class="text-gray-500 leading-loose">Dukungan End To End Recruitmen Process dari buka lowongan, hingga pegawai diterima!</p>
@@ -250,7 +253,7 @@
         </svg>
       </div>
     </section>
-    <section id="harga">
+    <section id="harga" data-aos="zoom-in" data-aos-duration="2000">
       <div class="skew skew-top mr-for-radius">
         <svg class="h-8 md:h-12 lg:h-20 w-full text-gray-50" viewbox="0 0 10 10" preserveaspectratio="none">
           <polygon fill="currentColor" points="0 0 10 10 0 10"></polygon>
@@ -439,7 +442,7 @@
         </svg>
       </div>
     </section>
-    <section class="py-20">
+    <section class="py-20" data-aos="zoom-in" data-aos-duration="2000">
       <div class="container mx-auto px-4">
         <div class="flex flex-wrap items-center">
           <div class="mb-12 lg:mb-0 w-full lg:w-1/2">
