--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
               </path>
             </svg>
           </li>
-          <li><a class="text-sm text-gray-400 hover:text-gray-500" href="#">FAQ</a></li>
+          <li><a class="text-sm text-gray-400 hover:text-gray-500" href="faq.html">FAQ</a></li>
           <li class="text-gray-800">
             <svg class="w-4 h-4 current-fill" xmlns="http://www.w3.org/2000/svg" fill="none" viewbox="0 0 24 24"
               stroke="currentColor">
