--- a/public/faq.html
+++ b/public/faq.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Page title</title>
+    <title>FAQ - Bukalowongan.id</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
@@ -13,18 +13,99 @@
   </head>
   <body class="antialiased bg-body text-body font-body">
     <div class=""> 
-    
+      <section class="relative bg-gray-50">
+        <nav class="relative px-6 py-6 flex justify-between items-center z-10"><a class="text-3xl font-bold leading-none"
+            href="#"><img class="h-12" src="atis-assets/logo/atis/logo.svg" alt="" width="auto" /></a>
+          <div class="lg:hidden">
+            <button class="navbar-burger flex items-center text-gray-400 p-3">
+              <svg class="block h-4 w-4 fill-current" viewbox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
+                <title>Mobile menu</title>
+                <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"></path>
+              </svg>
+            </button>
+          </div>
+          <ul
+            class="hidden absolute top-1/2 left-1/2 transform -translate-y-1/2 -translate-x-1/2 lg:flex lg:mx-auto lg:flex lg:items-center lg:w-auto lg:space-x-6">
+            <li><a class="text-sm text-gray-400 hover:text-gray-500" href="#harga">Harga</a></li>
+            <li class="text-gray-800">
+              <svg class="w-4 h-4 current-fill" xmlns="http://www.w3.org/2000/svg" fill="none" viewbox="0 0 24 24"
+                stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M12 5v.01M12 12v.01M12 19v.01M12 6a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2z">
+                </path>
+              </svg>
+            </li>
+            <li><a class="text-sm text-gray-400" href="#carakerja">Cara Kerja</a></li>
+            <li class="text-gray-800">
+              <svg class="w-4 h-4 current-fill" xmlns="http://www.w3.org/2000/svg" fill="none" viewbox="0 0 24 24"
+                stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M12 5v.01M12 12v.01M12 19v.01M12 6a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2z">
+                </path>
+              </svg>
+            </li>
+            <li><a class="text-sm text-gray-400 hover:text-gray-500" href="faq.html">FAQ</a></li>
+            <li class="text-gray-800">
+              <svg class="w-4 h-4 current-fill" xmlns="http://www.w3.org/2000/svg" fill="none" viewbox="0 0 24 24"
+                stroke="currentColor">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M12 5v.01M12 12v.01M12 19v.01M12 6a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2zm0 7a1 1 0 110-2 1 1 0 010 2z">
+                </path>
+              </svg>
+            </li>
+            <li><a class="text-sm text-gray-400 hover:text-gray-500" href="#">Kontak</a></li>
+          </ul>
+          <ul><a
+              class="hidden lg:inline-block py-2 px-6 bg-white hover:bg-gray-50 text-sm text-green-600 font-bold rounded-l-xl rounded-t-xl transition duration-200"
+              href="login.html">Login</a>
+            <a class="hidden lg:inline-block py-2 px-6 bg-green-600 hover:bg-gray-50 hover:text-green-600 text-sm text-white font-bold rounded-l-xl rounded-t-xl transition duration-200"
+              href="daftar.html">Daftar Sekarang</a>
+          </ul>
+        </nav>
+        <div class="hidden navbar-menu relative z-50">
+          <div class="navbar-backdrop fixed inset-0 bg-gray-800 opacity-25"></div>
+          <nav class="fixed top-0 left-0 bottom-0 flex flex-col w-5/6 max-w-sm py-6 px-6 bg-white border-r overflow-y-auto">
+            <div class="flex items-center mb-8"><a class="mr-auto text-3xl font-bold leading-none" href="#"><img class="h-10"
+                  src="atis-assets/logo/atis/logo.svg" alt="" width="auto" /></a>
+              <button class="navbar-close">
+                <svg class="h-6 w-6 text-gray-400 cursor-pointer hover:text-gray-500" xmlns="http://www.w3.org/2000/svg"
+                  fill="none" viewbox="0 0 24 24" stroke="currentColor">
+                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+                </svg>
+              </button>
+            </div>
+            <div>
+              <ul>
+                <li class="mb-1"><a
+                    class="block p-4 text-sm font-semibold text-gray-400 hover:bg-green-50 hover:text-green-600 rounded"
+                    href="#harga">Harga</a></li>
+                <li class="mb-1"><a
+                    class="block p-4 text-sm font-semibold text-gray-400 hover:bg-green-50 hover:text-green-600 rounded"
+                    href="#">Cara Kerja</a></li>
+                <li class="mb-1"><a
+                    class="block p-4 text-sm font-semibold text-gray-400 hover:bg-green-50 hover:text-green-600 rounded"
+                    href="#">FAQ</a></li>
+                <li class="mb-1"><a
+                    class="block p-4 text-sm font-semibold text-gray-400 hover:bg-green-50 hover:text-green-600 rounded"
+                    href="#">Kontak</a></li>
+              </ul>
+            </div>
+            <div class="mt-auto">
+              <div class="pt-6"><a
+                  class="block px-4 py-3 mb-3 leading-loose text-xs text-center font-semibold leading-none bg-gray-50 hover:bg-gray-100 rounded-l-xl rounded-t-xl"
+                  href="#">Sign In</a><a
+                  class="block px-4 py-3 mb-2 leading-loose text-xs text-center text-white font-semibold bg-green-600 hover:bg-green-700 rounded-l-xl rounded-t-xl"
+                  href="#">Sign Up</a></div>
+              <p class="my-4 text-xs text-center text-gray-400"><span>© 2020 All rights reserved.</span></p>
+              <div class="text-center"><a class="inline-block px-1" href="#"><img src="atis-assets/social/facebook.svg"
+                    alt="" /></a> <a class="inline-block px-1" href="#"><img src="atis-assets/social/twitter.svg"
+                    alt="" /></a> <a class="inline-block px-1" href="#"><img src="atis-assets/social/instagram.svg"
+                    alt="" /></a></div>
+            </div>
+          </nav>
+        </div>
+      </section>
       <section>
-        <div class="skew skew-top mr-for-radius">
-          <svg class="h-8 md:h-12 lg:h-20 w-full text-gray-50" viewbox="0 0 10 10" preserveaspectratio="none">
-            <polygon fill="currentColor" points="0 0 10 10 0 10"></polygon>
-          </svg>
-        </div>
-        <div class="skew skew-top ml-for-radius">
-          <svg class="h-8 md:h-12 lg:h-20 w-full text-gray-50" viewbox="0 0 10 10" preserveaspectratio="none">
-            <polygon fill="currentColor" points="0 10 10 0 10 10"></polygon>
-          </svg>
-        </div>
         <div class="py-20 bg-gray-50 radius-for-skewed">
           <div class="container mx-auto px-4">
             <div class="mb-16 max-w-xl mx-auto text-center">
