--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
               </path>
             </svg>
           </li>
-          <li><a class="text-sm text-gray-400 hover:text-gray-500" href="#">Kontak</a></li>
+          <li><a class="text-sm text-gray-400 hover:text-gray-500" href="contact.html">Kontak</a></li>
         </ul>
         <ul><a
           class="hidden lg:inline-block py-2 px-6 bg-white hover:bg-gray-50 text-sm text-green-600 font-bold rounded-l-xl rounded-t-xl transition duration-200"
