--- a/public/faq.html
+++ b/public/faq.html
@@ -26,7 +26,7 @@
           </div>
           <ul
             class="hidden absolute top-1/2 left-1/2 transform -translate-y-1/2 -translate-x-1/2 lg:flex lg:mx-auto lg:flex lg:items-center lg:w-auto lg:space-x-6">
-            <li><a class="text-sm text-gray-400 hover:text-gray-500" href="#harga">Harga</a></li>
+            <li><a class="text-sm text-gray-400 hover:text-gray-500" href="index.html#harga">Harga</a></li>
             <li class="text-gray-800">
               <svg class="w-4 h-4 current-fill" xmlns="http://www.w3.org/2000/svg" fill="none" viewbox="0 0 24 24"
                 stroke="currentColor">
@@ -35,7 +35,7 @@
                 </path>
               </svg>
             </li>
-            <li><a class="text-sm text-gray-400" href="#carakerja">Cara Kerja</a></li>
+            <li><a class="text-sm text-gray-400" href="index.html#carakerja">Cara Kerja</a></li>
             <li class="text-gray-800">
               <svg class="w-4 h-4 current-fill" xmlns="http://www.w3.org/2000/svg" fill="none" viewbox="0 0 24 24"
                 stroke="currentColor">
@@ -53,7 +53,7 @@
                 </path>
               </svg>
             </li>
-            <li><a class="text-sm text-gray-400 hover:text-gray-500" href="#">Kontak</a></li>
+            <li><a class="text-sm text-gray-400 hover:text-gray-500" href="contact.html">Kontak</a></li>
           </ul>
           <ul><a
               class="hidden lg:inline-block py-2 px-6 bg-white hover:bg-gray-50 text-sm text-green-600 font-bold rounded-l-xl rounded-t-xl transition duration-200"
