--- a/public/contact.html
+++ b/public/contact.html
@@ -106,8 +106,8 @@
         </div>
       </section>
       <section class="relative py-10 lg:h-screen bg-gray-50">
-        <div class="hidden lg:flex items-center absolute inset-0 w-2/5 bg-white">
-          <img class="mx-auto" src="atis-assets/illustrations/technical-support-dark-green.png" alt="">
+        <div class="hidden lg:flex items-center absolute inset-0 w-2/5 bg-gray-50">
+          <img class="mx-auto" src="atis-assets/illustrations/kontak.svg" alt="">
         </div>
         <div class="lg:absolute inset-0 flex justify-center items-center ml-auto w-full lg:w-3/5 bg-gray-50">
           <div class="container mx-auto px-4">
