menambahkan konten bahasa indonesia

--- a/public/contact.html
+++ b/public/contact.html
@@ -112,29 +112,29 @@
         <div class="lg:absolute inset-0 flex justify-center items-center ml-auto w-full lg:w-3/5 bg-gray-50">
           <div class="container mx-auto px-4">
             <div class="max-w-md mx-auto py-10">
-              <h3 class="mb-6 text-2xl">Got any question? Let&rsquo;s talk about it.</h3>
+              <h3 class="mb-6 text-2xl">Ada pertanyaan? Isi form berikut</h3>
               <form action="">
                 <div class="mb-4 text-sm">
-                  <span class="mr-4 font-semibold">Department:</span>
+                  <span class="mr-4 font-semibold">Pertanyaan Tentang:</span>
                   <label class="mr-4">
                     <input class="mr-1" type="radio" name="department" value="1" checked="">
-                    <span>Support</span>
+                    <span>Biaya</span>
                   </label>
                   <label>
                     <input class="mr-1" type="radio" name="department" value="2">
-                    <span>Sales</span>
+                    <span>Sistem</span>
                   </label>
                 </div>
                 <div class="mb-4">
-                  <input class="w-full p-4 text-xs font-semibold leading-none bg-white rounded outline-none" type="text" placeholder="Subject">
+                  <input class="w-full p-4 text-xs font-semibold leading-none bg-white rounded outline-none" type="text" placeholder="Subjek">
                 </div>
                 <div class="mb-4">
-                  <input class="w-full p-4 text-xs font-semibold leading-none bg-white rounded outline-none" type="text" placeholder="Name">
+                  <input class="w-full p-4 text-xs font-semibold leading-none bg-white rounded outline-none" type="text" placeholder="Nama">
                 </div>
                 <div class="mb-4">
                   <input class="w-full p-4 text-xs font-semibold leading-none bg-white rounded outline-none" type="email" placeholder="name@example.com">
                 </div>
-                <div class="mb-4"><textarea class="w-full h-24 p-4 text-xs font-semibold leading-none resize-none bg-white rounded outline-none" type="text" placeholder="Message..."></textarea></div>
+                <div class="mb-4"><textarea class="w-full h-24 p-4 text-xs font-semibold leading-none resize-none bg-white rounded outline-none" type="text" placeholder="Pesan..."></textarea></div>
                 <div class="mb-4">
                   <label class="flex px-2 bg-white rounded">
                     <input class="hidden" type="file" placeholder="Choose file.." name="Choose file">
@@ -144,9 +144,9 @@
                 <div class="flex justify-between items-center">
                   <label>
                     <input class="mr-1" type="checkbox" name="terms" value="1">
-                    <span class="text-sm font-semibold">I agree to terms and conditions.</span>
+                    <span class="text-sm font-semibold">Setuju dengan ketentuan yang berlaku</span>
                   </label>
-                  <button class="inline-block py-2 px-6 rounded-l-xl rounded-t-xl bg-green-600 hover:bg-green-700 text-gray-50 font-bold leading-loose transition duration-200">Get Started</button>
+                  <button class="inline-block py-2 px-6 rounded-l-xl rounded-t-xl bg-green-600 hover:bg-green-700 text-gray-50 font-bold leading-loose transition duration-200">Kirim Sekarang</button>
                 </div>
               </form>
             </div>
