--- a/public/contact.html
+++ b/public/contact.html
@@ -9,13 +9,14 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&amp;display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/tailwind/tailwind.min.css">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-tailwind.png">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="js/main.js"></script>
   </head>
   <body class="antialiased bg-body text-body font-body">
     <div class=""> 
       <section class="relative bg-gray-50">
         <nav class="relative px-6 py-6 flex justify-between items-center z-10"><a class="text-3xl font-bold leading-none"
-            href="#"><img class="h-12" src="atis-assets/logo/atis/logo.svg" alt="" width="auto" /></a>
+            href="index.html"><img class="h-12" src="atis-assets/logo/atis/logo.svg" alt="" width="auto" /></a>
           <div class="lg:hidden">
             <button class="navbar-burger flex items-center text-gray-400 p-3">
               <svg class="block h-4 w-4 fill-current" viewbox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
@@ -105,7 +106,7 @@
           </nav>
         </div>
       </section>
-      <section class="relative py-10 lg:h-screen bg-gray-50">
+      <section class="relative py-10 lg:h-screen bg-gray-50" data-aos="zoom-in" data-aos-duration="2000">
         <div class="hidden lg:flex items-center absolute inset-0 w-2/5 bg-gray-50">
           <img class="mx-auto" src="atis-assets/illustrations/kontak.svg" alt="">
         </div>
@@ -154,6 +155,10 @@
         </div>
       </section>
     </div>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
 
